# pyckage-cookiecutter

./: .buildinfo  .gitignore  .readthedocs.yml  01_about.html  02_prompts.html  03_core_team.html  03_release_notes.html  04_contributing.html  04_core_team.html  05_contributing.html  CNAME  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  cookiecutter.json  genindex.html  index.html  objects.inv  pyproject.toml  requirements-tests.txt  search.html  searchindex.js  setup.cfg  tox.ini
.github/workflows/: build.yml  main.yml  release.yml  sphinx.yml  test.yml
_sources/: 03_release_notes.rst.txt  04_core_team.rst.txt  index.rst.txt
docs/source/: 02_prompts.rst  03_release_notes.rst  conf.py  index.rst
hooks/: post_gen_project.py  pre_gen_project.py
requirements/: base.txt  dev.txt
tests/: conftest.py  test_bake_project.py
{{cookiecutter.__project_slug}}/: .gitlab-ci.yml  CONTRIBUTING.rst  Makefile  README.rst  bitbucket-pipelines.yml  pyproject.toml
{{cookiecutter.__project_slug}}/.github/workflows/: sphinx.yml  test.yml
{{cookiecutter.__project_slug}}/LICENSES/: 2-Clause BSD  3-Clause BSD
{{cookiecutter.__project_slug}}/docs/source/: conf.py  index.rst
{{cookiecutter.__project_slug}}/tests/: test_version.py
{{cookiecutter.project_slug}}/: .gitlab-ci.yml  CONTRIBUTING.rst  Makefile  README.rst  bitbucket-pipelines.yml  pyproject.toml  requirements-docs.txt  requirements-tests.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: build.yml  main.yml  release.yml  test.yml
{{cookiecutter.project_slug}}/LICENSES/: APACHE  GPL  MIT
{{cookiecutter.project_slug}}/docs/: make.bat
{{cookiecutter.project_slug}}/docs/source/: 02_installation.rst  03_authors.rst  03_usage.rst  05_release_notes.rst  conf.py  index.rst
{{cookiecutter.project_slug}}/requirements/: dev.txt  doc.txt
{{cookiecutter.project_slug}}/tests/: test_version.py
