[tool.poetry]
name = "Pyckage-Cookiecutter"
version = "1.0.2"
description = "This projects consist of a cookiecutter template that generates a full structure for a creating a PyPi standard package."
authors = ["Zhiwei Zhang <zhiwei2017@gmail.com>"]
readme = "README.rst"
license = "MIT"
repository = "https://github.com/zhiwei2017/pyckage-cookiecutter"
documentation = "https://zhiwei2017.github.io/pyckage-cookiecutter/"
keywords = ['cookiecutter template', 'python38', 'python39', 'python310', 'github-actions', 'gitlab-ci', 'bitbucket-pipelines']
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation",
    "Topic :: Utilities",
    "Natural Language :: English",
    "Intended Audience :: Developers"
]
packages = [
  {include = "pyckage_cookiecutter"}
]

include = [
  '{{cookiecutter.__project_slug}}/**/*',
  'cookiecutter.json',
  'hooks/*',
]

[tool.poetry.dependencies]
python = "^3.8.1"
cookiecutter = "~2.4"

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "~7.4"
pytest-cookies = "~0.7"
pytest-instafail = "~0.5"
pyyaml = "~6.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "~7.1"
sphinx_rtd_theme = "~1.3"

[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyckage_cookiecutter = 'pyckage_cookiecutter.main:main'

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "--verbose --instafail"